# Bio-Signal-Artifact-Removal

./: Information_Sheet_676.doc  README.md  bci_walls.py  eeg.py  eegGeneration.cpp  eegGeneration.hpp  eeg_generator.py  gan.py  generate_eeg.py  get_results.py  initial_params.xlsx  make_wav_file.m  noise_source.py  param_search.py  results.xlsx  sin2eeg.py  sin2eegbckup.py  t_test.py  train_gan.py
deepNeuronalFilter/: .signal 2.txt.icloud  CMakeCache.txt  CMakeLists.txt  Makefile  ProgressBar.h  cmake_install.cmake  dnf_test.cpp  dynamicPlots.cpp  dynamicPlots.h  eeg_filt_test.cpp  eeg_filter  eeg_filter_demo.cpp  eeg_filter_minimal.cpp  initial_params.xlsx  options.json  parameters.h  run_all_stat.sh  tqdm.h  utils.h
deepNeuronalFilter/DNF/: .CMakeLists 2.txt.icloud  .Makefile 2.icloud  Makefile  cmake_install.cmake
deepNeuronalFilter/DNF/lib/: .Layer 2.cpp.icloud  .Net 2.cpp.icloud  .Neuron 2.cpp.icloud  Layer.cpp  Net.cpp  Neuron.cpp
deepNeuronalFilter/SubjectData/: EEG_Subject1.tsv
deepNeuronalFilter/cppData/: subject1cppParams_subject1.tsv
deepNeuronalFilter/cppData/subject0/: error_subject_Alpha0.tsv  error_subject_Delta0.tsv  fnn_subject_Alpha0.tsv  fnn_subject_Delta0.tsv  grayLayer10_Alpha_subject0.csv  grayLayer10_DNF_subject0.csv  grayLayer10_Delta_subject0.csv  (+96 more)
deepNeuronalFilter/pyFiles/: .forInner 2.dat.icloud  .forOuter 2.dat.icloud  .generateFirFilters 2.py.icloud  .plotBoxplots 2.py.icloud  .plotComparison 2.py.icloud  .plotRawData 2.py.icloud  .plotWeigthGreyScale 2.py.icloud  generateFirFilters.py  plotRawData.py  plotResults.py
(+600 files in other folders)
