cmake_minimum_required(VERSION 3.8.1)
project(eeg_filter)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(DNF)
find_package(OpenCV REQUIRED)
find_package(Boost 1.76 REQUIRED)
find_package(iir)
find_package(fir)
add_executable(eeg_filter dnf_test.cpp parameters.h cvui.h)
target_link_libraries(eeg_filter CLDL iir::iir iir::iir_static fir ${OpenCV_LIBS})